# TvSU_Translator

./: CMakeLists.txt  CodeToAnalyze.txt  LICENSE  README.md  input.minic  main.cpp  miniC-code.txt  output.txt
Google_test/: CMakeLists.txt  lexTests.cpp  ll-tests.cpp  sym-tests.cpp
LALR/: CMakeLists.txt
LL/: CMakeLists.txt
LL/include/: ll.h
LL/src/: ll.cpp
LexerLib/: CMakeLists.txt
LexerLib/include/: LexGraph.h  Lexer.h
LexerLib/src/: LexGraph.cpp  Lexer.cpp
ShuntingYardLib/: CMakeLists.txt
ShuntingYardLib/include/: SYM.h
ShuntingYardLib/src/: SYM.cpp
Translator/: CMakeLists.txt
Translator/include/: Translator.h
Translator/src/: ASMPrint.cpp  AtomsPrint.cpp  BuildingFunctions.cpp  ExprGrammar.cpp  Functions.cpp  LangGrammar.cpp  MiniCGrammar.cpp  Translator.cpp
files/: Atoms.atom  CodeGraph.graph  MiniC_Code.minic  Result.asm
